--- a/pages/goods-details/index.wxss
+++ b/pages/goods-details/index.wxss
@@ -284,9 +284,9 @@ swiper-item image {
 }
 .goods-guige .guige-item{
   font-size: 26rpx;
-  padding: 15rpx 30rpx 15rpx 20rpx;
+  padding: 10rpx 30rpx 10rpx 20rpx;
   background: #f5f5f5;
-  border-radius: 10rpx;
+  border-radius: 6rpx;
   margin-bottom: 20rpx;
   box-sizing: border-box;
   border: 1rpx solid #d7d7d7;
@@ -313,11 +313,14 @@ swiper-item image {
 }
 .jiu-can-box .ci-shu-tag{
   font-size: 26rpx;
-  padding: 15rpx 33rpx;
+  width: 118rpx;
+  height: 54rpx;
+  line-height: 54rpx;
   border: 1rpx solid #d7d7d7;
   background: #f5f5f5;
-  border-radius: 10rpx;
+  border-radius: 6rpx;
   margin-left: 20rpx;
+  text-align: center;
 }
 .jiu-can-box .ci-shu-tag.active{
   color: #ff001c;
