完善确认订单页面样式

--- a/pages/to-pay-order/index.wxml
+++ b/pages/to-pay-order/index.wxml
@@ -1,73 +1,51 @@
 <view class="container">
-     <form bindsubmit="createOrder" report-submit="true">
-     <view class="address-box" wx:if="{{isNeedLogistics > 0}}">
-        <view class="add-address" hidden="{{curAddressData}}">
-            <view class="title" bindtap="addAddress">新增收货地址</view>
+  <form bindsubmit="createOrder" report-submit="true">
+    <view class="address-box">
+      <view class="add-address" hidden="{{curAddressData}}">
+        <view class="title" bindtap="addAddress">新增收货地址</view>
+      </view>
+      <view class="show-address" hidden="{{!curAddressData}}" bindtap="selectAddress">
+        <view class="row">
+          <view class="name-or-class">{{curAddressData.consignee||curAddressData.consignee}}</view>
+          <view class="mobile">{{curAddressData.mobile}}</view>
         </view>
-        <view class="show-address" hidden="{{!curAddressData}}" bindtap="selectAddress">
-            <view class="name-tel">{{curAddressData.linkMan}}  {{curAddressData.mobile}}</view>
-            <view class="addr-text">{{curAddressData.address}}</view>
+        <view class="row">
+          <image class="address-type" src="/images/useType/{{curAddressData.addressType?'school':'canguan'}}.png"></image>
+          <view class="addr-text">{{curAddressData.address}}</view>
         </view>
-     </view>
-     <view class="goods-list">
-        <view class="list-title">商品列表</view>
-        <view class="a-goods" wx:for-items="{{goodsList}}" wx:key="{{index}}">
-            <view class="img-box">
-                <image src="{{item.pic}}" class="img" />
-            </view>
-            <view class="text-box">
-                <view class="arow arow01">
-                    <view class="goods-name">{{item.name}}</view>
-                    <view class="goods-price">¥ {{item.price}}</view>
-                </view>
-                <view class="arow">
-                    <view class="goods-label">{{item.label}}</view>
-                    <view class="goods-num">x {{item.number}}</view>
-                </view>
-            </view>
-        </view>
-     </view>
-     <view class="peisong-way">
-        <view class="row-box" wx:if="{{isNeedLogistics > 0}}">
-            <view class="row-label">配送方式</view>
-            <view class="right-text" wx:if="{{yunPrice > 0}}">快递</view>
-            <view class="right-text" wx:if="{{yunPrice == 0}}">包邮</view>
-        </view>
-        <view class="row-box">
-            <view class="row-label">备注</view>
-            <view class="right-text">
-                <input name="remark" type="text" class="liuyan" placeholder="如需备注请输入" />
-            </view>
-        </view>
-     </view>
-     <view class="peisong-way" hidden="{{hasNoCoupons}}">
-        <view class="row-box" style="border-bottom:none;">
-          <picker-view indicator-style="height: 50rpx;" style="width: 100%; height: 150rpx;" value="0" bindchange="bindChangeCoupon">
-            <picker-view-column>
-              <view style="line-height: 50px">不使用优惠券</view>
-              <view wx:for="{{coupons}}" wx:key="id" style="line-height: 50px">{{item.money}}元 {{item.name}}</view>
-            </picker-view-column>
-          </picker-view>
-        </view>
-     </view>
-
-
-     <view class="goods-info" wx:if="{{(isNeedLogistics > 0 && yunPrice > 0) || (!hasNoCoupons)}}">
-        <view class="row-box" wx:if="{{isNeedLogistics > 0 && yunPrice > 0}}">
-            <view class="row-label">商品金额</view>
-            <view class="right-text">¥ {{allGoodsPrice}}</view>
-        </view>
-        <view class="row-box" wx:if="{{isNeedLogistics > 0 && yunPrice > 0}}">
-            <view class="row-label">运费</view>
-            <view class="right-text">+ ¥ {{yunPrice}}</view>
-        </view>
-     </view>
-
-     <view class="jiesuan-box">
-        <view class="left-price">
-            <view class="total">合计：¥ {{allGoodsAndYunPrice - youhuijine}}</view>
-        </view>
-        <button class="to-pay-btn" formType="submit">提交订单</button>
+        <image class="arrow-right" src="/images/arrow-right.png"></image>
+      </view>
     </view>
-    </form>
+    <view class="goods-list">
+      <view class="a-goods" wx:for-items="{{goodsList}}" wx:key="{{index}}">
+        <view class="img-box">
+<!--          <image src="{{item.fileUrls[0]}}" class="img"/>-->
+          <image src="http://www.xlzy520.cn/750_600/餐馆餐具.png" class="img"/>
+        </view>
+        <view class="text-box">
+          <view class="name-price">
+            <view class="goods-name">{{item.goodsName}}</view>
+            <view class="goods-price"><view style="font-size: 30rpx">¥</view>{{item.priceStr}}</view>
+          </view>
+          <view class="guige-num">
+            <view class="goods-guige">({{item.specsList[0].specsStr}})</view>
+            <view class="goods-num"><view style="font-size: 20rpx;margin-right: 15rpx">x</view> {{item.number|| 100}}</view>
+          </view>
+          <view class="heji">
+            <view class="heji-gong">共{{}}4份, </view>
+            <view class="heji-xiaoji">小计:</view>
+            <view class="heji-yuan">¥ </view>
+            <view class="heji-price">{{}}16.00</view>
+          </view>
+        </view>
+      </view>
+    </view>
+    <view class="tips">* 08:00 - 17:00 间下单，一小时后开始配送。</view>
+    <view class="jiesuan-box">
+      <view class="left-price">
+        <view class="total">合计：¥ {{allGoodsAndYunPrice - youhuijine}}</view>
+      </view>
+      <button class="to-pay-btn" formType="submit">提交订单</button>
+    </view>
+  </form>
 </view>
