--- a/pages/to-pay-order/index.wxss
+++ b/pages/to-pay-order/index.wxss
@@ -1,191 +1,247 @@
-.container{
-    background-color:#F2f2f2;
-    padding-bottom: 100rpx;
-}
-.address-box{
-    width: 100%;
-    background: url(https://cdn.it120.cc/images/weappshop/arrow-right.png) no-repeat 705rpx center ,
-                url(https://cdn.it120.cc/images/weappshop/addr-line.png) no-repeat center bottom;
-    background-size: 16rpx auto,750rpx auto;
-    background-color: #fff;
-    margin: 20rpx 0; 
-}
-.add-addres{
-    width: 100%;
-}
-.add-address .title{
-    font-size: 28rpx;
-    color: #000;
-    margin-left: 30rpx;
-    background: url(https://cdn.it120.cc/images/weappshop/ico-add-addr.png) no-repeat left center;
-    background-size: 60rpx auto;
-    padding: 40rpx 0 40rpx 90rpx; 
-}
-.show-address{
-    width: 664rpx;
-    box-sizing: border-box;
-    padding-left: 100rpx;
-    background: url(https://cdn.it120.cc/images/weappshop/ico-addr.png) no-repeat 30rpx 35rpx;
-    background-size: 30rpx auto;
-}
-.show-address .name-tel{
-    font-size: 28rpx;
-    color: #000;
-    padding: 30rpx 0 20rpx 0;
-}
-.show-address .addr-text{
-    font-size: 24rpx;
-    color: #888;
-    padding-bottom: 34rpx;
-    line-height: 36rpx;
-}
-form{
-    width: 100%;
-}
-.goods-list{
-    width:100%;
-    background-color: #fff;
-    margin-bottom: 20rpx;
-}
-.goods-list .list-title{
-    font-size: 28rpx;
-    color: #000;
-    padding: 30rpx 0 25rpx 30rpx;
-}
-.goods-list  .a-goods{
-    width: 720rpx;
-    margin-left: 30rpx;
-    display: flex;
-    /*justify-content: space-between;*/
-    border-top: 1px solid #eee;
-    padding: 30rpx 30rpx 30rpx 0;
-}
-.goods-list  .a-goods .img-box{
-    width: 160rpx;
-    height:160rpx;
-    overflow: hidden;
-    margin-right: 20rpx;
-    background-color: #d8d8d8;
+.container {
+  background-color: #f8f8f8;
+  padding-bottom: 100rpx;
 }
 
-.goods-list .img-box .img{
-    width: 160rpx;
-    height:160rpx;
+.address-box {
+  width: 690rpx;
+  background-color: #fff;
+  margin: 30rpx;
+  height: 134rpx;
+  border-radius: 20rpx;
 }
-.goods-list  .a-goods .text-box{
-    width: 510rpx;
-    box-sizing: border-box;
-    padding-top: 10rpx;
+.add-addres {
+  width: 100%;
 }
-.a-goods .text-box .arow{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
- }
-.a-goods .text-box .arow .goods-name{
-     width: 360rpx;
-     font-size:26rpx;
-     height: 74rpx;
-     color:#000000;
-     line-height: 1.6;
-     overflow: hidden;
- }
-.a-goods .text-box .arow01{
-    margin-bottom: 30rpx;
+.add-address .title {
+  font-size: 28rpx;
+  color: #000;
+  margin-left: 30rpx;
+  background: url(https://cdn.it120.cc/images/weappshop/ico-add-addr.png) no-repeat left center;
+  background-size: 60rpx auto;
+  padding: 40rpx 0 40rpx 90rpx;
 }
-.a-goods .text-box .arow .goods-price{
-    font-size:26rpx;
-    color:#000000;
-    align-self: flex-start;
+.row{
+  display: flex;
+  padding-top: 25rpx;
+  line-height: 1;
 }
-.a-goods .text-box .arow .goods-label{
-    font-size: 26rpx;
-    color: #999;
+.name-or-class{
+  font-size: 26rpx;
+  padding: 0 21rpx 0 0;
 }
-.a-goods .text-box .arow .goods-num{
-    font-size: 26rpx;
-    color: #999;
+.mobile{
+  font-family: Mark Pro Regular, sans-serif;
+  font-size: 26rpx;
+  color: #999;
+  padding-top: 5rpx;
 }
-.peisong-way{
-    width: 100%;
-    background-color: #fff;
-    margin-bottom: 20rpx;
+.address-type{
+  width: 66rpx;
+  height: 30rpx;
 }
-.peisong-way .row-box{
-    width: 720rpx;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    box-sizing: border-box;
-    padding: 24rpx 0 24rpx 30rpx;
-    border-bottom: 1rpx solid #eee;
+.show-address {
+  padding-left:30rpx;
 }
-.peisong-way .row-label{
-    font-size: 28rpx;
-    color: #000;
+.arrow-right{
+  width: 12rpx;
+  height: 22rpx;
+  position: relative;
+  left:620rpx;
+  top:-70rpx;
 }
-.peisong-way .right-text{
-    font-size: 28rpx;
-    color: #666;
-    padding-right: 30rpx;
+.show-address .name-tel {
+  font-size: 28rpx;
+  color: #000;
+  padding: 30rpx 0 20rpx 0;
 }
-.peisong-way .liuyan{
-    width: 510rpx;
-    font-size: 28rpx;
+.show-address .addr-text {
+  margin-left: 30rpx;
+  font-size: 24rpx;
+  line-height: 1.3;
 }
-.goods-info{
-    width: 100%;
-    background-color: #fff;
-    margin-bottom: 120rpx;
-    padding-bottom: 24rpx;
-}
-.goods-info .row-box{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    box-sizing: border-box;
-    padding: 24rpx 30rpx 12rpx 30rpx;
-    font-size: 28rpx;
-    color: #000;
-}
-.goods-info .row-box .right-text{
-    text-align: right;
-}
-.jiesuan-box{
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    height: 100rpx;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    border-top:1px solid #eee; 
-    background-color: #fff;
-    z-index: 999;
-}
-.jiesuan-box .to-pay-btn{
-    width:250rpx;
-    text-align: center;
-    height: 100%;
-    line-height: 100rpx;
-    background-color: #e64340;
-    font-size:32rpx;
-    color:#ffffff;
-    border-radius: 0;
+form {
+  width: 100%;
 }
 
-.jiesuan-box  .left-price{
-    display: flex;
-    width: 500rpx;
-    justify-content:flex-end;
-    line-height: 100rpx;
-    padding: 0 30rpx 0 0;
-    font-size:28rpx;
-    box-sizing: border-box;
+
+.goods-list {
+  width: 690rpx;
+  border-radius: 20rpx;
+  background-color: #fff;
+  margin-bottom: 30rpx;
+  margin: auto;
+}
+.goods-list .a-goods {
+  margin: 0 30rpx;
+  display: flex;
+  border-top: 1px solid #eee;
+  padding: 30rpx 0;
+}
+.goods-list .a-goods .img-box {
+  width: 164rpx;
+  height: 164rpx;
+  margin-right: 30rpx;
+}
+.goods-list .img-box .img {
+  width: 164rpx;
+  height: 164rpx;
+}
+.goods-list .a-goods .text-box {
+  width: 100%;
+  padding-top: 10rpx;
+}
+.goods-list .a-goods .text-box .name-price{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  line-height: 40rpx;
+}
+.name-price .goods-name{
+  font-size: 26rpx;
+}
+.name-price .goods-price{
+  display: flex;
+  font-family: DINAlternate Bold, sans-serif;
+  font-weight: bold;
+  font-size: 34rpx;
+  color: #ff0000;
+}
+.guige-num{
+  margin-top: 30rpx;
+  display: flex;
+  justify-content: space-between;
+}
+.guige-num .goods-guige{
+  font-size: 22rpx;
+  color: #888;
+}
+.guige-num .goods-num{
+  display: flex;
+  color: #888;
+  font-size: 28rpx;
+  line-height: 40rpx;
+}
+.heji{
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 30rpx;
+  line-height: 40rpx;
+  font-size: 22rpx;
+}
+.heji .heji-gong{
+  color: #888;
+  margin-right: 15rpx;
+}
+.heji .heji-xiaoji{
+
+}
+.heji .heji-yuan,
+.heji .heji-price{
+  font-family: DINAlternate Bold, sans-serif;
+  font-weight: bold;
+  color: #ff0000;
+}
+.heji .heji-price{
+  font-size: 28rpx;
+}
+.a-goods .text-box .arow {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.jiesuan-box .total{
-    color: #e64340;
-    text-align: right;
+.a-goods .text-box .arow .goods-name {
+  width: 360rpx;
+  font-size: 26rpx;
+  height: 74rpx;
+  color: #000000;
+  line-height: 1.6;
+  overflow: hidden;
+}
+
+.a-goods .text-box .arow01 {
+  margin-bottom: 30rpx;
+}
+
+.a-goods .text-box .arow .goods-price {
+  font-size: 26rpx;
+  color: #000000;
+  align-self: flex-start;
+}
+
+.a-goods .text-box .arow .goods-label {
+  font-size: 26rpx;
+  color: #999;
+}
+
+.a-goods .text-box .arow .goods-num {
+  font-size: 26rpx;
+  color: #999;
+}
+
+
+.goods-info {
+  width: 100%;
+  background-color: #fff;
+  margin-bottom: 120rpx;
+  padding-bottom: 24rpx;
+}
+.goods-info .row-box {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-sizing: border-box;
+  padding: 24rpx 30rpx 12rpx 30rpx;
+  font-size: 28rpx;
+  color: #000;
+}
+.goods-info .row-box .right-text {
+  text-align: right;
+}
+
+.tips{
+  width: 690rpx;
+  margin: 30rpx auto 0;
+  text-align: right;
+  font-size: 24rpx;
+  color: #888;
+
+}
+
+.jiesuan-box {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 100rpx;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  border-top: 1px solid #eee;
+  background-color: #fff;
+  z-index: 999;
+}
+.jiesuan-box .to-pay-btn {
+  width: 250rpx;
+  text-align: center;
+  height: 100%;
+  line-height: 100rpx;
+  background-color: #e64340;
+  font-size: 32rpx;
+  color: #ffffff;
+  border-radius: 0;
+}
+.jiesuan-box .left-price {
+  display: flex;
+  width: 500rpx;
+  justify-content: flex-end;
+  line-height: 100rpx;
+  padding: 0 30rpx 0 0;
+  font-size: 28rpx;
+  box-sizing: border-box;
+}
+.jiesuan-box .total {
+  color: #e64340;
+  text-align: right;
 }
