修复新增地址时不能判断学校和餐馆的bug

--- a/pages/address-add/index.wxml
+++ b/pages/address-add/index.wxml
@@ -11,7 +11,7 @@
     </view>
   </view>
   <form bindsubmit="bindSave" class="form-content">
-    <view class="form-box" wx:if="{{addressData.addressType}}">
+    <view class="form-box" wx:if="{{addressData.addressType==='1'}}">
       <view class="row-wrap">
         <input name="consignee" class="input" type="text" placeholder-class="phcolor" maxlength="25"
                placeholder="收货人" value="{{addressData.consignee}}"/>
@@ -25,13 +25,13 @@
                       placeholder-class="phcolor" value="{{addressData.address}}"/>
       </view>
     </view>
-    <view class="form-box school" wx:if="{{!addressData.addressType}}">
+    <view class="form-box school" wx:if="{{addressData.addressType==='0'}}">
       <view class="row-wrap">
         <picker bindchange="bindPickerChange" value="{{schoolIndex}}" range="{{schoolList}}" range-key="schoolName">
           <view class="picker">{{schoolList[schoolIndex].schoolName}}</view>
         </picker>
       </view>
-      <view class="row-wrap" wx:if="{{!addressData.addressType}}">
+      <view class="row-wrap">
         <input name="classNumber" class="input" type="text" placeholder-class="phcolor" maxlength="16"
                placeholder="班级号码（例：113班）" value="{{classNumber}}"/>
       </view>
