--- a/pages/to-pay-order/index.wxss
+++ b/pages/to-pay-order/index.wxss
@@ -112,6 +112,9 @@ form {
   display: flex;
   justify-content: space-between;
 }
+.guige-num.school{
+  justify-content: flex-end;
+}
 .guige-num .goods-guige{
   font-size: 22rpx;
   color: #888;
@@ -122,6 +125,26 @@ form {
   font-size: 28rpx;
   line-height: 40rpx;
 }
+
+.num-detail{
+  position:relative;
+  display:flex;
+  flex-direction: column;
+  right:70rpx;
+  margin-top: 40rpx;
+}
+.num-detail .num-detail-row{
+  margin-top: 30rpx;
+  display: flex;
+  font-size: 22rpx;
+}
+.num-detail-row .ji-can{
+  margin-right: 20rpx;
+}
+.num-detail-row .ji-suan-shi{
+  color: #888;
+}
+
 .heji{
   display: flex;
   justify-content: flex-end;
@@ -213,35 +236,38 @@ form {
 .jiesuan-box {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   width: 100%;
-  height: 100rpx;
+  height: 95rpx;
+  line-height: 95rpx;
   position: fixed;
   bottom: 0;
   left: 0;
-  border-top: 1px solid #eee;
+  border-top: 1px solid #f0f0f0;
   background-color: #fff;
   z-index: 999;
 }
 .jiesuan-box .to-pay-btn {
-  width: 250rpx;
+  width: 210rpx;
+  border-radius: 37.5rpx;
   text-align: center;
-  height: 100%;
-  line-height: 100rpx;
-  background-color: #e64340;
-  font-size: 32rpx;
-  color: #ffffff;
-  border-radius: 0;
-}
-.jiesuan-box .left-price {
-  display: flex;
-  width: 500rpx;
-  justify-content: flex-end;
-  line-height: 100rpx;
-  padding: 0 30rpx 0 0;
+  height: 75rpx;
+  line-height: 75rpx;
+  background-image: linear-gradient(90deg,#ff0000,#ff0025);
   font-size: 28rpx;
+  color: #ffffff;
+}
+.jiesuan-box .heji {
+  font-size: 26rpx;
+  width: 530rpx;
+  margin-top: 0;
+  line-height: 95rpx;
+  padding: 0 30rpx 0 0;
   box-sizing: border-box;
 }
-.jiesuan-box .total {
-  color: #e64340;
-  text-align: right;
+.jiesuan-box .heji-yuan{
+  font-size: 30rpx;
+}
+.jiesuan-box .heji-price{
+  font-size: 34rpx;
 }
