--- a/pages/order-my/index.wxml
+++ b/pages/order-my/index.wxml
@@ -1,7 +1,7 @@
 <view class="container">
   <view class="status-box">
-    <view bindtap="statusTap" class="status-label {{index == currentType ? 'active' : ''}}"
-          wx:for-items="{{statusType}}" wx:key="{{index}}" data-index="{{index}}">
+    <view bindtap="statusTap" class="status-label {{index == currentTab ? 'active' : ''}}"
+          wx:for="{{orderTypeTabs}}" data-index="{{index}}">
       <view class="label">{{item}}</view>
     </view>
   </view>
@@ -12,44 +12,39 @@
     <view bindtap="goBack" class="no-order-back">返回</view>
   </view>
   <view class="order-list" hidden="{{orderList.length === 0}}">
-    <view class="a-order" wx:for-items="{{orderList}}" wx:key="{{index}}">
+    <view class="a-order" wx:for="{{orderList}}" wx:key="{{index}}">
       <view class="order-number">
         <view class="order-number-label">订单号：{{item.orderNumber}}</view>
-        <view class="order-status {{(item.status==-1 || item.status==4) ? '':'red'}}">{{item.statusStr}}</view>
+        <view class="order-status">{{item.statusName}}</view>
       </view>
       <view class="goods-info" bindtap="orderDetail" data-id="{{item.id}}">
-        <view class="goods-box" wx:for-items="{{goodsMap[item.id]}}" wx:key="{{index}}">
-          <image src="{{item.pic}}" class="goods-img"></image>
+        <view class="goods-box" wx:for="{{item.orderDetails}}" wx:for-item="goods" wx:key="{{goods.orderId}}">
+          <image src="{{goods.goodsUrl}}" class="goods-img"></image>
           <view class="goods-right">
             <view class="goods-right-header">
-              <view class="goods-name">{{item.goodsName}}</view>
-              <view class="goods-price">￥{{item.amount}}</view>
+              <view class="goods-name">{{goods.goodsName}}{{goods.description}}</view>
+              <view class="goods-price"><view style="font-size: 30rpx">¥</view> {{goods.price}}</view>
             </view>
-            <view class="goods-number">
-              <view class="goods-number-left">x </view>
-              <view>{{item.number}}</view>
+            <view class="goods-number {{goods.useType==='餐馆餐具'||goods.useType==='宴席餐具'?'': 'school'}}">
+              <view class="goods-guige" wx:if="{{goods.useType==='餐馆餐具'||goods.useType==='宴席餐具'}}">
+                ({{goods.specsStr}})</view>
+              <view class="goods-num"><view style="font-size: 20rpx;margin-right: 15rpx">x</view> {{goods.quantity}}</view>
             </view>
           </view>
         </view>
       </view>
-      <view class="price-box">
-        <view class="total-price">
-          共
-          <view class="total-number">{{item.goodsNumber}}</view>
-          份
-          <view class="white-space"></view>
-          合计：
-          <view class="price">
-            <view class="price-unit">¥</view>
-            {{item.amountReal}}
-          </view>
-        </view>
-        <view class="order-action">
-          <view class="btn cancel-btn" hidden="{{item.status==0? false : true}}" bindtap="cancelOrderTap"
-                data-id="{{item.id}}">取消订单</view>
-          <view class="btn topay-btn" hidden="{{item.status==0? false : true}}" bindtap="toPayTap" data-id="{{item.id}}"
-                data-money="{{item.amountReal}}" data-score="{{item.score}}">立即支付</view>
-        </view>
+      <view class="heji">
+        <!-- todo 记得删除默认-->
+        <view class="heji-gong">共{{item.goodsNumber||200}}份, </view>
+        <view class="heji-xiaoji">合计:</view>
+        <view class="heji-yuan">¥ </view>
+        <view class="heji-price">{{allGoodsPrice||'500.00'}}</view>
+      </view>
+      <view class="order-action">
+        <view class="btn cancel-btn" hidden="{{!item.orderStatusId}}" bindtap="cancelOrderTap"
+              data-id="{{item.orderId}}">取消订单</view>
+        <view class="btn topay-btn" hidden="{{!item.orderStatusId}}" bindtap="toPayTap" data-id="{{item.orderId}}"
+              data-money="{{item.amountReal}}">立即支付</view>
       </view>
     </view>
 
