--- a/pages/order-details/index.wxss
+++ b/pages/order-details/index.wxss
@@ -24,7 +24,8 @@
   margin-top: 16rpx;
 }
 
-.address-box {
+.address-box,
+.order-status-des {
   width: 100%;
   display: flex;
   align-items: center;
@@ -33,7 +34,12 @@
   height: 150rpx;
   box-sizing:border-box;
 }
-.address-box .icon{
+.order-status-des{
+  height: 120rpx;
+  border-bottom: 1rpx solid #e5e5e5;
+}
+.address-box .icon,
+.order-status-des .icon{
   width: 58rpx;
   height: 58rpx;
 }
@@ -218,15 +224,42 @@
   text-align: center;
 }
 
-.confirm-btn {
-  background: #ffffff;
-  border: 1rpx solid #e64340;
-  border-radius: 6rpx;
-  width: 164rpx;
-  height: 60rpx;
-  line-height: 60rpx;
-  margin: 20rpx 30rpx 20rpx auto;
+.order-operation{
+  width: 100%;
+  height: 99rpx;
+  background: #fff;
+  margin-top: 30rpx;
+  padding: 0 30rpx;
+  box-sizing: border-box;
+}
+.order-operation .btn-row{
+  display: flex;
+  justify-content: flex-end;
+  height: 99rpx;
+  line-height: 99rpx;
+  align-items: center;
+}
+.confirm-btn,
+.cancel-btn,
+.pay-btn{
+  background: #fff;
+  border-radius: 25rpx;
+  height: 51rpx;
+  line-height: 51rpx;
+  padding: 0 20rpx;
   font-size: 26rpx;
-  color: #e64340;
   text-align: center;
 }
+.cancel-btn{
+  border: 1rpx solid #000;
+  margin-right: 40rpx;
+}
+.confirm-btn, .pay-btn{
+  color: #fa1529;
+  border: 1rpx solid #fa1529;
+}
+.confirm-btn{
+  margin: 0 30rpx;
+}
+
+
