--- a/pages/order-my/index.wxml
+++ b/pages/order-my/index.wxml
@@ -1,10 +1,5 @@
 <view class="container">
-  <view class="status-box">
-    <view bindtap="statusTap" class="status-label {{index == currentTab ? 'active' : ''}}"
-          wx:for="{{orderTypeTabs}}" data-index="{{index}}">
-      <view class="label">{{item}}</view>
-    </view>
-  </view>
+  <top-nav tabList="{{orderTypeTabs}}" currentTab="{{currentTab}}" bindchange="statusTap"></top-nav>
   <view class="no-order" hidden="{{orderList.length !== 0}}">
     <image src="/images/no-order.png" class="no-order-img"></image>
     <view class="text" wx:if="{{currentType === 0}}">暂无订单，去别处看看吧。</view>
