--- a/components/goods-list/index.wxss
+++ b/components/goods-list/index.wxss
@@ -4,6 +4,7 @@
   min-height: 100vh;
 }
 .goods-container{
+  width: 750rpx;
   display: flex;
   justify-content: space-between;
   flex-wrap:wrap;
